--- a/VisualOS.desktop
+++ b/VisualOS.desktop
@@ -3,9 +3,8 @@ Name=VisualOS
 Comment=Visual simulator of an operating system
 Comment[pl]=Wizualny symulator systemu operacyjnego
 Exec=VisualOS
-#Icon=
 Terminal=false
 Type=Application
-Categories=Emulator;
+Categories=GTK;GNOME;Utility;Emulator;
 Encoding=UTF-8
 # vi: encoding=utf-8
